<resources>
    <string name="app_name">WeatherApp</string>
    <string name="main_title">Ryan\'s Weather App</string>
    <string name="plus">+</string>
    <string name="test">test</string>
    <string name="location_name">location_name</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels Like</string>
    <string name="temperature_default">temp_default</string>
    <string name="feels_like_default">feels_like_default</string>
    <string name="editable_temp_string">%.1f " \u2109"</string>
    <string name="add_location_image_description">An image that is meant to be clicked to add a location</string>
    <string name="icon_img_desc">Shows an icon representing the weather</string>
</resources>