<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/quantum_lightblue300"
    tools:context=".ShowWeather">

    <TextView
        android:id="@+id/feelslike_textview"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/orienta"
        android:text="@string/feels_like"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview" />

    <TextView
        android:id="@+id/edit_feelslike_textview"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="248dp"
        android:fontFamily="@font/orienta"
        android:text="@string/feels_like_default"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview" />

    <TextView
        android:id="@+id/location_name_textview"
        android:layout_width="368dp"
        android:layout_height="63dp"
        android:layout_marginStart="21dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/orienta"
        android:text="@string/location_name"
        android:textAlignment="center"
        android:textSize="36sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature_textview"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/orienta"
        android:text="@string/temperature"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview" />

    <TextView
        android:id="@+id/edit_temp_textview"
        android:layout_width="109dp"
        android:layout_height="31dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="208dp"
        android:fontFamily="@font/orienta"
        android:text="@string/temperature_default"
        android:textAlignment="center"
        android:textSize="18sp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="140dp"
        android:indeterminate="true"
        android:indeterminateTint="#2196F3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_name_textview" />
</androidx.constraintlayout.widget.ConstraintLayout>